--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 certifi==2024.12.14
 charset-normalizer==3.4.1
+gevent==24.11.1
+greenlet==3.1.1
 idna==3.10
 krakenex==2.2.2
 numpy==2.2.2
@@ -8,6 +10,11 @@ pykrakenapi==0.3.2
 python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
+setuptools==75.8.0
 six==1.17.0
 tzdata==2025.1
 urllib3==2.3.0
+websocket==0.2.1
+websocket-client==1.8.0
+zope.event==5.0
+zope.interface==7.2
